--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,10 +10,21 @@ requires-python = ">=3.12"
 dependencies = [
     "textual>=3.5.0",
 ]
+keywords = ["chat", "socket", "tui"]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Environment :: Console",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Topic :: Communications :: Chat",
+]
+
+[project.urls]
+Repository = "https://github.com/mati-33/sack"
 
 [project.scripts]
 sack = "sack.main:main"
-dev = "sack.dev:main"
+sackdev = "sack.dev:main"
 
 [build-system]
 requires = ["hatchling"]
