--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,35 @@ sackdev = "sack.dev:main"
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.pyright]
+include = ["src"]
+typeCheckingMode = "standard"
+
+[tool.ruff.lint]
+select = [
+    "E",  # pycodestyle errors
+    "W",  # pycodestyle warnings
+    "F",  # pyflakes
+    "I",  # isort
+    "B",  # flake8-bugbear
+    "C4",  # flake8-comprehensions
+    "UP",  # pyupgrade
+]
+ignore = [
+    "F401", # unused imports
+]
+
+[tool.ruff.lint.per-file-ignores]
+"src/sack/main.py" = ["W291"]
+
+[tool.ruff.lint.isort]
+known-first-party = ["src"]
+length-sort = true
+lines-after-imports = 2
+lines-between-types = 1
+
 [dependency-groups]
 dev = [
+    "ruff>=0.12.5",
     "textual-dev>=1.7.0",
 ]
