--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,7 @@ ignore = [
 ]
 
 [tool.ruff.lint.per-file-ignores]
-"src/sack/main.py" = ["W291"]
+"src/sack/assets.py" = ["W291"]
 
 [tool.ruff.lint.isort]
 known-first-party = ["src"]
