--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "sack"
+name = "sack-chat"
 version = "1.0.0"
 description = "Lightweight chat application for terminal"
 readme = "README.md"
@@ -28,6 +28,9 @@ sack = "sack.main:main"
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/sack"]
 
 [tool.pyright]
 include = ["src"]
